--- a/ScreenshotsPractice/test-output/old/Default suite/methods.html
+++ b/ScreenshotsPractice/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfb7b5">  <td>22/12/07 15:44:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.getScreenshot(org.testng.ITestResult)[pri:0, instance:screenshots.TestGoogle@a8c1f44]">&lt;&lt;getScreenshot</td> 
-<td>&nbsp;</td>  <td>main@1191864687</td>   <td></td> </tr>
-<tr bgcolor="a78a81">  <td>22/12/07 15:44:05</td>   <td>-5863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGoogle.TestGoogleMethod()[pri:0, instance:screenshots.TestGoogle@a8c1f44]">TestGoogleMethod</td> 
-  <td>main@1191864687</td>   <td></td> </tr>
-<tr bgcolor="bfb7b5">  <td>22/12/07 15:44:02</td>   <td>-9845</td> <td title="&gt;&gt;BaseClass.InitializeBrowser()[pri:0, instance:screenshots.TestGoogle@a8c1f44]">&gt;&gt;InitializeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1191864687</td>   <td></td> </tr>
-<tr bgcolor="bfb7b5">  <td>22/12/07 15:44:12</td>   <td>284</td> <td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:screenshots.TestGoogle@a8c1f44]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1191864687</td>   <td></td> </tr>
+<tr bgcolor="dacd74">  <td>22/12/20 15:59:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestGoogle.TestGoogleMethod()[pri:0, instance:screenshots.TestGoogle@53f48368]">TestGoogleMethod</td> 
+  <td>main@119112899</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>22/12/20 15:58:59</td>   <td>-3692</td> <td title="&gt;&gt;BaseClass.InitializeBrowser()[pri:0, instance:screenshots.TestGoogle@53f48368]">&gt;&gt;InitializeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@119112899</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>22/12/20 15:59:28</td>   <td>25345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.getScreenshot(org.testng.ITestResult)[pri:0, instance:screenshots.TestGoogle@53f48368]">&lt;&lt;getScreenshot</td> 
+<td>&nbsp;</td>  <td>main@119112899</td>   <td></td> </tr>
+<tr bgcolor="74c16d">  <td>22/12/20 15:59:28</td>   <td>25787</td> <td title="&lt;&lt;BaseClass.Teardown()[pri:0, instance:screenshots.TestGoogle@53f48368]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@119112899</td>   <td></td> </tr>
 </table>
